Fixed homepage carousels 1px gap bug

--- a/assets/css/_navbar.sass
+++ b/assets/css/_navbar.sass
@@ -7,7 +7,7 @@
     flex-wrap: nowrap
     width: 2.8vw
     min-width: 49px 
-    margin-right: 0.4vw
+    margin-right: 2rem 0.4vw 2rem 0
     background: white
     padding: 2rem 0
 
